--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,5 +3,19 @@ project:
   output-dir: docs # very important for getting the website to display properly when you use GitHub Pages
 
 website:
-  title: "A Quarto Website"
+  title: "STA5073Z"
+  navbar:
+    left:
+      - href: Assignment1_Tanweer.qmd
+        text: "Report"
+      - href: docs/plagiarism_declaration.pdf
+        text: "Plagiarism Declaration"
+      - href: https://github.com/STR-Nujjoo/STA5073Z-Assignment1
+        text: "Github"
+
+format:
+  html:
+    theme: cosmo
+    toc: true
+
 
